--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script>
+    function expand(){
+        Telegram.WebApp.expand()
+    }
+    function close(){
+        Telegram.WebApp.close()
+    }
+</script>
 <body>
-    Hello
+    <button onclick="expand()">expand</button>
+    <button onclick="close()">close</button>
+
 </body> 
-</html>l
+</html>
